<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="10dp"
    app:cardElevation="5dp"
    android:layout_margin="@dimen/activity_margin"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_padding_medium"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_margin_half"
            android:textAlignment="textStart"
            android:text="@string/msg_when_user_present"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_medium"
            android:paddingStart="@dimen/text_size_medium"
            android:paddingEnd="@dimen/text_size_medium"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_margin="@dimen/activity_margin_quarter">
            <TextView
                android:id="@+id/yes_text_view"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_margin_half"
                android:textAlignment="textStart"
                android:text="@string/Yes"
                android:textColor="@color/red"
                android:textSize="@dimen/text_size_big"
                android:paddingStart="@dimen/text_size_medium"
                android:paddingEnd="@dimen/text_size_medium"/>
            <TextView
                android:id="@+id/no_text_view"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/activity_margin_half"
                android:textAlignment="textEnd"
                android:text="@string/No"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_big"
                android:paddingStart="@dimen/text_size_medium"
                android:paddingEnd="@dimen/text_size_medium"/>
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>