<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginStart="@dimen/activity_margin_content"
    android:layout_marginEnd="@dimen/activity_margin_content"
    app:cardElevation="5dp"
    app:cardCornerRadius="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_padding_medium"
        android:layout_marginEnd="@dimen/activity_margin_quarter"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="@dimen/activity_margin_half">

            <TextView
                android:id="@+id/chgpwd_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center"
                android:layout_marginTop="@dimen/activity_margin"
                android:text="@string/change_password"
                android:textAllCaps="true"
                android:textColor="@color/red"
                android:textSize="@dimen/text_size_medium"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/bt_close"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:fontFamily="@font/roboto"
                android:visibility="gone"
                android:layout_alignEnd="@+id/chgpwd_txt"
                android:layout_gravity="right|end"
                android:layout_marginEnd="10dp"
                android:background="@drawable/close"
                android:gravity="center_vertical"
                android:padding="10dp" />
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/activity_margin"
            >

        <EditText
            android:id="@+id/et_current_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_margin_half"
            android:hint="@string/current_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
           android:backgroundTint="@color/edit_bg"
            android:fontFamily="@font/roboto"
            android:maxLines="1"
            android:paddingTop="@dimen/activity_margin"
            android:paddingBottom="@dimen/activity_margin"
            android:textSize="@dimen/text_size_normal" />


        <EditText
            android:id="@+id/et_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_margin_half"
            android:hint="@string/new_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:backgroundTint="@color/edit_bg"
            android:fontFamily="@font/roboto"
            android:maxLines="1"
            android:paddingTop="@dimen/activity_margin"
            android:paddingBottom="@dimen/activity_margin"
            android:textSize="@dimen/text_size_normal" />


        <EditText
            android:id="@+id/et_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_margin_half"
            android:hint="@string/confirm_password"
            android:importantForAutofill="no"
            android:backgroundTint="@color/edit_bg"
            android:inputType="textPassword"
            android:fontFamily="@font/roboto"
            android:maxLines="1"
            android:paddingTop="@dimen/activity_margin"
            android:paddingBottom="@dimen/activity_margin"
            android:textSize="@dimen/text_size_normal" />

        <Button
            android:id="@+id/bt_done"
            android:layout_width="130dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="@dimen/activity_padding_half"
            android:background="@drawable/sign_rnd_button"
            android:text="@string/save"
            android:fontFamily="@font/roboto_medium"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_medium"
             />
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>