<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
    android:layout_margin="@dimen/activity_margin"
        app:cardElevation="5dp"
        app:cardCornerRadius="10dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">



                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignParentTop="true"
                        android:layout_marginTop="@dimen/activity_padding_medium"
                        android:layout_marginStart="@dimen/activity_padding_medium"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_value"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/activity_margin"
                            android:gravity="center"
                            android:text="@string/spportive"
                            android:fontFamily="@font/roboto_medium"
                            android:textAllCaps="true"
                            android:textColor="@color/textcolor"
                            android:textSize="@dimen/text_size_medium" />


                        <TextView
                            android:id="@+id/tv_seekbarProg"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:layout_marginTop="5dp"
                            android:layout_marginEnd="20dp"
                            android:fontFamily="@font/roboto"
                            android:text="@string/no_pbar"
                            android:textColor="@color/font"
                            android:textSize="@dimen/text_size_normal" />

                        <SeekBar
                            android:id="@+id/seekbar"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginEnd="10dp"
                            android:gravity="center" />
                    </LinearLayout>

                    <ImageView
                        android:id="@+id/iv_dismiss"
                        android:layout_width="22dp"
                        android:layout_height="22dp"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="@dimen/activity_padding_half"
                        android:layout_marginEnd="@dimen/activity_padding_half"
                        android:padding="@dimen/activity_padding_medium"
                        android:visibility="gone"
                        android:src="@drawable/close"
                        android:contentDescription="@string/app_name"
                        android:tint="@color/textcolor" />
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/activity_margin"
                    android:layout_marginEnd="@dimen/activity_margin"
                    android:layout_marginBottom="@dimen/activity_padding_medium"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_rating"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:layout_marginTop="@dimen/activity_padding_medium"
                        android:fontFamily="@font/roboto"
                        android:maxLines="5"
                        android:text="@string/up_p0"
                        android:textColor="@color/font"
                        android:textSize="@dimen/text_size_small" />


                    <TextView
                        android:id="@+id/tv_done"
                        android:layout_width="100dp"
                        android:layout_height="35dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/activity_margin"
                        android:layout_marginBottom="@dimen/activity_margin"
                        android:layout_weight=".3"
                        android:background="@drawable/sign_rnd_button"
                        android:gravity="center"
                        android:fontFamily="@font/roboto_medium"
                        android:textStyle="normal"
                        android:text="@string/done"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_medium" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>



    </androidx.cardview.widget.CardView>
